# Tetris-Game-Cpp

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  azure-pipelines-1.yml  azure-pipelines.yml  conanfile.txt
.github/workflows/: c-cpp.yml
include/: block.h  blocks.h  colors.h  game.h  grid.h
src/game/: block.cpp  game.cpp  grid.cpp
tests/: test_block.cpp  test_game.cpp  test_grid.cpp  test_main.cpp
